# Oasis-old

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake.yml  docs.yml
cmake/: AddOasisTest.cmake
desktop/: CMakeLists.txt  SimpleView.cpp  SimpleView.hpp  main.cpp  pch.hpp
desktop/components/: KeypadButton.cpp  KeypadButton.hpp
desktop/components/KeypadButton/: KeypadButton.cpp
desktop/components/Menubar/: Menubar.cpp  Menubar.hpp
desktop/views/: SimpleView.cpp  SimpleView.hpp
desktop/views/Arithmetic/: Arithmetic.cpp  Arithmetic.hpp
desktop/views/BaseConverter/: BaseConverter.cpp  BaseConverter.hpp
desktop/views/SimpleView/: SimpleView.cpp  SimpleView.hpp
desktop/views/TruthTable/: TruthTable.cpp  TruthTable.hpp
include/Oasis/: Add.hpp  Blank.hpp  Divide.hpp  Exponent.hpp  Expression.hpp  Multiply.hpp  Oasis.hpp  Real.hpp  Substitute.hpp  Subtract.hpp  Variable.hpp
include/Oasis/Utility/: BinaryExpressionNode.hpp  LeafExpressionNode.hpp  Types.hpp
src/: Add.cpp  BinaryEvaluateReturnType.cpp  BinaryExpressionNode.cpp  Blank.cpp  Divide.cpp  Exponent.cpp  Expression.cpp  LeafExpressionNode.cpp  Multiply.cpp  Real.cpp  Substitute.cpp  Subtract.cpp  Variable.cpp
test/: AddTest.cpp  CopyTest.cpp  DivideTest.cpp  EqualityTest.cpp  ExponentTest.cpp  MultiplyTest.cpp  SubstituteTest.cpp  SubtractTest.cpp  VariableTest.cpp
